@@ -2321,4 +2321,5 @@
             }.bind(this));
         }
     });
+    Sao.Screen.tree_column_optional = {};
 }());
