@@ -1,3 +1,4 @@
+* Manage optional column
 * Display the number of selected records
 * Humanize the count result
 * Add limit to search_count
